force-app/main/default/objects/Criminal_Court_Timeline__c/Criminal_Court_Timeline__c.object-meta.xml
<CustomObject>
    <label>Criminal Court Timeline</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Criminal Court Timeline #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criminal Court Timeline</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>