force-app/main/default/objects/Criminal_Court_Timeline__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Criminal Court Timeline</relationshipLabel>
    <relationshipName>Criminal_Court_Timeline</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>