force-app/main/default/objects/Criminal_Court_Timeline__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>