force-app/main/default/objects/Criminal_Court_Timeline__c/fields/Defendant__c.field-meta.xml
<CustomField>
    <fullName>Defendant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Criminal Court Timeline</relationshipLabel>
    <relationshipName>Criminal_Court_Timeline</relationshipName>
    <type>Lookup</type>
</CustomField>