force-app/main/default/objects/Criminal_Court_Timeline__c/fields/Event_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Event_Subtype__c</fullName>
    <inlineHelpText>Enter the specifics of the motion, hearing, or decision/order</inlineHelpText>
    <label>Event Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>