force-app/main/default/objects/Criminal_Court_Timeline__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Surrender Date</fullName>
            </value>
            <value>
                <fullName>Appeal Filed Date</fullName>
            </value>
            <value>
                <fullName>Appellant Brief Filed Date</fullName>
            </value>
            <value>
                <fullName>Appellate Order Date</fullName>
            </value>
            <value>
                <fullName>Appellee Brief Filed Date</fullName>
            </value>
            <value>
                <fullName>Appendix Filed Date</fullName>
            </value>
            <value>
                <fullName>Arraignment Date</fullName>
            </value>
            <value>
                <fullName>Arrest Date</fullName>
            </value>
            <value>
                <fullName>Brief Filed Date</fullName>
            </value>
            <value>
                <fullName>DAT Return Date (NYC Only)</fullName>
            </value>
            <value>
                <fullName>Decision/Order Date</fullName>
            </value>
            <value>
                <fullName>General Adjournment</fullName>
            </value>
            <value>
                <fullName>Grand Jury Action</fullName>
            </value>
            <value>
                <fullName>Hearing Date</fullName>
            </value>
            <value>
                <fullName>Indictment Date</fullName>
            </value>
            <value>
                <fullName>Motion Filed Date</fullName>
            </value>
            <value>
                <fullName>Notice of Appeal Date</fullName>
            </value>
            <value>
                <fullName>Notice of Hearing Date</fullName>
            </value>
            <value>
                <fullName>Plea Date</fullName>
            </value>
            <value>
                <fullName>Reply Brief Filed Date</fullName>
            </value>
            <value>
                <fullName>Response Brief Filed Date</fullName>
            </value>
            <value>
                <fullName>Returned on a Warrant</fullName>
            </value>
            <value>
                <fullName>SCAR Date (Supreme Court Arraignment) (NYC Only)</fullName>
            </value>
            <value>
                <fullName>Seizure Date</fullName>
            </value>
            <value>
                <fullName>Sentencing Date</fullName>
            </value>
            <value>
                <fullName>Surrender Date</fullName>
            </value>
            <value>
                <fullName>Transcript Filed Date</fullName>
            </value>
            <value>
                <fullName>Trial End Date</fullName>
            </value>
            <value>
                <fullName>Trial Start Date</fullName>
            </value>
            <value>
                <fullName>180.80 Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>