force-app/main/default/objects/Criminal_Court_Timeline__c/fields/NYPD_Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>NYPD_Complaint_Number__c</fullName>
    <formula>Case__r.NYPD_Complaint_Number__c</formula>
    <label>NYPD Complaint Number</label>
    <type>Text</type>
</CustomField>